# safe-opax

./: .gitignore  .pre-commit-config.yaml  README.md  evaluate.py  pyproject.toml  train_actsafe.py  train_lambda.py
.github/: ci.yaml
.github/workflows/: astro.yml  ci.yaml
actsafe/: opax.py
actsafe/actsafe/: actsafe.py  augmented_lagrangian.py  dummy_penalizer.py  exploration.py  lbsgd.py  make_actor_critic.py  multi_reward.py  opax_bridge.py  safe_actor_critic.py  sentiment.py  types.py  world_model.py
actsafe/benchmark_suites/: __init__.py
actsafe/common/: double_buffer.py  learner.py
actsafe/configs/: config.yaml
actsafe/la_mbda/: actor_critic.py  augmented_lagrangian.py  dummy_penalizer.py  exploration.py  la_mbda.py  lbsgd.py  make_actor_critic.py  multi_reward.py  opax_bridge.py  replay_buffer.py  rssm.py  safe_actor_critic.py  sentiment.py  world_model.py
actsafe/lambda_dalal/: la_mbda_dalal.py
actsafe/rl/: acting.py  episodic_async_env.py  epoch_summary.py  metrics.py  trainer.py  types.py  utils.py
docs/: package-lock.json  package.json
docs/.astro/: settings.json
page/.astro/: icon.d.ts
safe_opax/: opax.py
safe_opax/actsafe/: actsafe.py
safe_opax/benchmark_suites/: __init__.py  utils.py
safe_opax/cem_gp/: cem.py  cem_gp.py  gp_model.py
safe_opax/common/: double_buffer.py  learner.py  math.py  mixed_precision.py  pytree_utils.py
safe_opax/configs/: config.yaml  evaluate.yaml
safe_opax/la_mbda/: actor_critic.py  augmented_lagrangian.py  cem.py  dummy_penalizer.py  exploration.py  la_mbda.py  lbsgd.py  multi_reward.py  (+9 more)
tests/: __init__.py  test_mixed_precision.py  test_safe_adaptation_gym.py  test_sentiment.py  test_trainer.py  test_unsupervised_trainer.py
(+123 files in other folders)
